dataset1235/2025-2/2318198438/users/3878856075/executions/2445341515_1092214117.log
== RUN (2025-09-02 00:38:51)
-- CODE: 
quantidade=float(input(":"))

y=29.80*quantidade
print(round(y+0.15*0.15, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:89.42
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:29.82
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:149.02
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:268.22
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:59.62
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:33:53)
-- CODE: 
quantidade=float(input(":"))
#x=9.80+20.00=29.80
y=29.80+0.15*0.15
print(round(x, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(x, 2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(x, 2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(x, 2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(x, 2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(x, 2))
                ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:06:33)
-- CODE: 
quantidade=float(input(":"))
#29.80
total=(quantidade*9.80)+20.00
print(round(total*0.15+0.15,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:7.56
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:4.62
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:10.5
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:16.38
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:6.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:06:06)
-- CODE: 
quantidade=float(input(":"))
#29.80
total=(quantidade*9.80)+20.00
print(round(total+0.15,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:49.55
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:29.95
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:69.15
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:108.35
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:39.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:37:09)
-- CODE: 
quantidade=float(input(":"))

y=29.80*quantidade
print(round(y*0.15, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:13.41
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:4.47
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:22.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:40.23
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:8.94
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:05:49)
-- CODE: 
quantidade=float(input(":"))
#29.80
total=(quantidade*9.80)+20.00
print(round(total+0.15*0.15,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:49.42
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:29.82
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:69.02
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:108.22
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:39.62
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:34:23)
-- CODE: 
quantidade=float(input(":"))

y=29.80+0.15*0.15
print(round(y, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:29.82
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:29.82
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:29.82
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:29.82
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:29.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:00:52)
-- CODE: 
quantidade=float(input(":"))
#29.80

print(quantidade+29.80+0.15*0.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:32.8225
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:30.8225
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:34.8225
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:38.8225
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:31.8225
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:38:22)
-- CODE: 
quantidade=float(input(":"))

y=29.80*quantidade
print(round(y*0.15+0.15, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:13.56
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:4.62
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:22.5
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:40.38
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:9.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:38:37)
-- CODE: 
quantidade=float(input(":"))

y=29.80*quantidade
print(round(0.15+y*0.15, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:13.56
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:4.62
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:22.5
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:40.38
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:9.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 01:07:02)
-- CODE: 
quantidade=float(input(":"))
#29.80
total=(quantidade*9.80)+20.00
print(round(total+total*0.15,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:56.81
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:34.27
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:79.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:124.43
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:45.54
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:36:33)
-- CODE: 
quantidade=float(input(":"))

y=29.80*quantidade
print(round(y*0.15, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:13.41
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:4.47
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:22.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:40.23
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:8.94
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:04:56)
-- CODE: 
quantidade=float(input(":"))
#29.80
total=(quantidade*9.80)+20.00
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:49.4
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:29.8
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:69.0
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:108.2
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:39.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:02:38)
-- CODE: 
quantidade=float(input(":"))
#29.80
x=quantidade+29.80
print(round(x+0.15*0.15,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:32.82
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:30.82
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:34.82
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:38.82
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:31.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:37:51)
-- CODE: 
quantidade=float(input(":"))

y=29.80*quantidade*0.15+0.15
print(round(y, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:13.56
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:4.62
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:22.5
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:40.38
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:9.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:36:53)
-- CODE: 
quantidade=float(input(":"))

y=29.80*quantidade
print(round(y+0.15*0.15, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:89.42
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:29.82
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:149.02
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:268.22
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:59.62
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:37:39)
-- CODE: 
quantidade=float(input(":"))

y=29.80*quantidade*0.15
print(round(y, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:13.41
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:4.47
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:22.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:40.23
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:8.94
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:36:45)
-- CODE: 
quantidade=float(input(":"))

y=29.80*quantidade
print(round(y+0.15*0.15, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:89.42
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:29.82
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:149.02
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:268.22
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:59.62
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:31:26)
-- CODE: 
quantidade=float(input(":"))
x=9.80+20.00*0.15
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:32:00)
-- CODE: 
quantidade=float(input(":"))
x=9.80+20.00*0.15
print(round(x, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
File "XXXX", line 3
    print(round(x, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
File "XXXX", line 3
    print(round(x, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
File "XXXX", line 3
    print(round(x, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
File "XXXX", line 3
    print(round(x, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
File "XXXX", line 3
    print(round(x, 2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:02:15)
-- CODE: 
quantidade=float(input(":"))
#29.80
x=quantidade+29.80
print(round(x*0.15,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:4.92
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:4.62
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:5.22
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:5.82
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:4.77
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:06:55)
-- CODE: 
quantidade=float(input(":"))
#29.80
total=(quantidade*9.80)+20.00
print(round(total+total*0.15,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:56.81
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:34.27
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:79.35
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:124.43
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:45.54
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:32:06)
-- CODE: 
quantidade=float(input(":"))
x=9.80+20.00*0.15
print(round(x, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:12.8
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:12.8
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:12.8
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:12.8
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:12.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:04:41)
-- CODE: 
quantidade=float(input(":"))
#29.80
total=(quantidade*9.80)+20.00
print(round(x,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 01:00:11)
-- CODE: 
quantidade=float(input(":"))
#29.80
print(quantidade+29.80*0.15)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
56.81
---- user output:
:7.47
-- TEST CASE 2:
---- input:
1
---- correct output:
34.27
---- user output:
:5.47
-- TEST CASE 3:
---- input:
5
---- correct output:
79.35
---- user output:
:9.469999999999999
-- TEST CASE 4:
---- input:
9
---- correct output:
124.43
---- user output:
:13.469999999999999
-- TEST CASE 5:
---- input:
2
---- correct output:
45.54
---- user output:
:6.47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
